[build-system]
requires = ["setuptools>=61.0", "setuptools-rust>=1.5.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wisq"
version = "0.2.4"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bqskit",
    "numpy",
    "python-sat",
    "pyzx",
    "qiskit>=1.0",
    "rustworkx",
    "pennylane"
]

authors = [
    { name = "Abtin Molavi, Amanda Xu", email = "amolavi@wisc.edu"},
    { name = "Amanda Xu", email = "axu44@wisc.edu"},
]

keywords = [
    "quantum circuit",
    "quantum computing",
    "quantum",
    "fault tolerant quantum computing",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
wisq = "wisq:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
